Fix: Contenido e importaciones de clases estandarizados